# databricks

./: .gitignore  README.md  main.py  pyproject.toml
infra/: .terraform.lock.hcl  main.tf  variables.tf
notebooks/: hello_databricks_notebook.py
project/assets/: product_asset.py
project/extract/: product.py
